--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Customizable OMR Simulator</title>
+    <title>Customizable Digital OMR Sheet</title> <!-- Title updated -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Customizable Digital OMR Sheet Simulator</h1>
+        <h1>Customizable Digital OMR Sheet</h1> <!-- Title updated -->
     </header>
 
     <main>
@@ -39,7 +39,7 @@
             </div>
             <!-- OMR Sheet Grid -->
             <div id="omr-sheet">
-                <p class="placeholder">Sheet generating...</p> <!-- Placeholder changed slightly -->
+                <p class="placeholder">Sheet generating...</p>
             </div>
             <!-- Report Area -->
             <div id="report-area" class="report" style="display: none;">
@@ -54,8 +54,9 @@
         </section>
     </main>
 
-        <footer>
-        <p>A simple tool for focused practice. | Created by Arpit Singh</p>
+    <footer>
+        <p>A simple tool for focused practice.</p>
+        <p style="margin-top: 10px; font-size: 0.9em; color: #555;">Created by Arpit Singh</p>
     </footer>
 
     <script src="app.js"></script>
