--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Customizable Digital OMR Sheet</title> <!-- Title updated -->
+    <title>Customizable Digital OMR Sheet</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Customizable Digital OMR Sheet</h1> <!-- Title updated -->
+        <h1>Customizable Digital OMR Sheet</h1>
     </header>
 
     <main>
